--- a/index.html
+++ b/index.html
@@ -31,12 +31,8 @@
         <div class="container px-4 px-lg-5">
             <!-- Heading Row-->
             <div class="row gx-4 gx-lg-5 align-items-center my-5">
-                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="pic\flyer.jpg" alt="..." /></div>
-                <div class="col-lg-5">
-                    <h1 class="font-weight-light">Trinitech Consulting Global</h1>
-                    <p>The Best in IT training </p>
-                    <a class="btn btn-primary" href="#!">Call to Action!</a>
-                </div>
+                <div class="col-lg-7"><img class="img-fluid rounded mb-4 mb-lg-0" src="pic\flyer.jpg" width="800" height="400" alt="" alt="..." /></div>
+                
             </div>
             <!-- Call to Action-->
             <div class="card text-white bg-secondary my-5 py-4 text-center">
